Disabling the spell checker is not an error b=296265 r+sr=mscott a=asa